@@ -1,3 +1,7 @@
+2009-01-20 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.nsis/Makefile: updated to NSIS version 2.42
+
 2008-12-23 Borut Razem <borut.razem AT siol.net>
 
 	* .sdcc_builder/profile: added LD_LIBRARY_PATH
